Prevent wrapping of chevron on listing with narrow devices

--- a/client/styles/_home.less
+++ b/client/styles/_home.less
@@ -33,6 +33,7 @@
     }
     .item {
       position: relative;
+      padding-right: 10px;
     }
 
     .item-id-name {
@@ -66,6 +67,10 @@
       font-weight:bold;
       display: inline;
       padding-left: 12px;
+    }
+
+    .chevron {
+      padding-left: 0;
     }
 
     .workitem-name {
